--- a/client/src/components/Icon/styles.scss
+++ b/client/src/components/Icon/styles.scss
@@ -1,5 +1,5 @@
 .icon {
-	@apply h-8 w-8 bg-none border-none rounded-full p-1;
+	@apply h-8 w-8 bg-none border-none rounded-full p-1 flex-shrink-0;
 
 	svg {
 		@apply w-full h-full;
